--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,6 +31,6 @@ jobs:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository }}:${{ github.sha }}
-          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.sha }}
+          ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
         platforms: linux/amd64
