--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Build project
         run: |
-          ls -ltrah
           CGO_ENABLED=1 go build -o kafka-app main.go
+          go run main.go
