updated the print statement

--- a/deployment/kafka-with-confluent/templates/deployment.yaml
+++ b/deployment/kafka-with-confluent/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
               value: {{.Values.service.env.AWS_REGION}}
             - name: GROUP
               value: {{.Values.service.env.GROUP}}
-            - name: TOPIC
+            - name: TOPICS
               value: {{.Values.service.env.TOPICS}}
           imagePullPolicy: Always
           resources:
